added panels to proj manager, fixed bugs in editor, added extender/retractor

--- a/inner/src/todo.txt
+++ b/inner/src/todo.txt
@@ -68,7 +68,7 @@ DONE
 DONE
 
 9a. Phase matching for duplicate notes in different color channels
-NOT DONE
+DONE
 
 9b. Proper layer ordering in universal view
 DONE
